[package]
name = "ds-rust-otlp"
version = "0.1.0"
edition = "2021"

[dependencies]
headers = "0.4"
hyper = { version = "1.1", default-features = false, features = ["http1", "http2", "client"] }
hyper-util = "0.1"
hyper-tls = "0.6"
opentelemetry = { version = "0.24", default-features = false, features = ["trace"] }
opentelemetry-http = { version = "0.13", features = ["hyper"] }
opentelemetry-otlp = { version = "0.17", default-features = false, features = ["http-proto"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.25.0", default-features = false, features = ["tracing-log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
